# ghcjs-dom-hello

./: .gitignore  LOG  builder.sh  cabal.project  flake.nix  foo.nix  foo.sh  ghcjs-dom-hello.cabal  test.nix
nix/: hix.nix
