name: ghcjs-dom-hello
version: 6.0.0.1
cabal-version: 1.24
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Hamish Mackenzie
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@gmail.com>
stability: stable
homepage: https://github.com/ghcjs/ghcjs-dom-hello
bug-reports: https://github.com/ghcjs/ghcjs-dom-hello/issues
synopsis: GHCJS DOM Hello World, an example package
description:
    This is an implementation of the classic "Hello World" program using GHCJS DOM,
    as an example of how to create a minimal GHCJS DOM application.
    Please submit any suggestions and improvements.
category: Web
author: Hamish Mackenzie
data-files: .ghci cabal.project

source-repository head
    type: git
    location: https://github.com/ghcjs/ghcjs-dom-hello

flag warp
    description: Build ghcjs-dom-hello-warp
    default: False

flag webkitgtk
    description: Build ghcjs-dom-hello-webkitgtk
    default: False

flag webkit2gtk
    description: Use WebKit2 version of WebKitGTK.
    default: False

library
    exposed-modules:
        HelloMain
    build-depends:
        base >=4.2 && <5,
        ghcjs-dom >=0.9 && <0.10,
        mtl >=2.1 && <2.4, containers,
        transformers,
        vector,	attoparsec-time, base64-bytestring, blaze-html, blaze-markup, bytestring, case-insensitive, cereal, clay, comonad,
        containers, data-default, directory, exceptions, filepath, formatting, generic-data, generic-lens, groom, hashable,
        hslogger, html-entity, html-parse, i18n
    -- , ixset-typed
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -ferror-spans

executable ghcjs-dom-hello
    main-is: Main.hs
    build-depends:
        base,
        ghcjs-dom-hello,
        mtl
    hs-source-dirs: src-bin
    default-language: Haskell2010
    ghc-options: -threaded -Wall -ferror-spans

    if arch(javascript) && impl(ghc >= 9.10.1)
      ghc-options: -ddisable-js-c-sources

